Adding simple tasks

--- a/08.Responsive-Web-Design-Exercises-Resources/Resources/04/table.html
+++ b/08.Responsive-Web-Design-Exercises-Resources/Resources/04/table.html
@@ -7,50 +7,53 @@
     <link rel="stylesheet" href="../04/table.css">
 </head>
 <body>
-    <div class="container first">
+    <div class=" first">
         <h1>Title 1</h1>
-        <div class="row">
-            <div class="column">
-                <div class="title">Title 1</div>
-                <div>Value 1</div>
-            </div>      
-            <div class="column">
-                <div class="title">Title 2 is fairly very long </div>
-                <div>Value 2</div>
+        <div class="container">
+            <div class="row">
+                <div class="column">
+                    <div class="title">Title 1</div>
+                    <div>Value 1</div>
+                </div>      
+                <div class="column">
+                    <div class="title">Title 2 is fairly very long </div>
+                    <div>Value 2</div>
+                </div>
+                <div class="column">
+                    <div class="title">Title 3</div>
+                    <div>Value 3</div>
+                </div>       
             </div>
-            <div class="column">
-                <div class="title">Title 3</div>
-                <div>Value 3</div>
-            </div>       
-        </div>
-        <div class="row">
-            <div class="column">
-                <div class="title">Title 1</div>
-                <div>Value 1</div>
-            </div>      
-            <div class="column">
-                <div class="title">Title 2 is fairly very long </div>
-                <div>Value 2</div>
+            <div class="row">
+                <div class="column">
+                    <div class="title">Title 1</div>
+                    <div>Value 1</div>
+                </div>      
+                <div class="column">
+                    <div class="title">Title 2 is fairly very long </div>
+                    <div>Value 2</div>
+                </div>
+                <div class="column">
+                    <div class="title">Title 3</div>
+                    <div>Value 3</div>
+                </div>       
             </div>
-            <div class="column">
-                <div class="title">Title 3</div>
-                <div>Value 3</div>
-            </div>       
-        </div>
-        <div class="row">
-            <div class="column">
-                <div class="title">Title 1</div>
-                <div>Value 1</div>
-            </div>      
-            <div class="column">
-                <div class="title">Title 2 is fairly very long </div>
-                <div>Value 2</div>
+            <div class="row">
+                <div class="column">
+                    <div class="title">Title 1</div>
+                    <div>Value 1</div>
+                </div>      
+                <div class="column">
+                    <div class="title">Title 2 is fairly very long </div>
+                    <div>Value 2</div>
+                </div>
+                <div class="column">
+                    <div class="title">Title 3</div>
+                    <div>Value 3</div>
+                </div>       
             </div>
-            <div class="column">
-                <div class="title">Title 3</div>
-                <div>Value 3</div>
-            </div>       
         </div>
+        
        
     </div>
     <div class="container second">
