Adding some more exercises

--- a/RetakeExam_Resources/03.NewsLetter/index.html
+++ b/RetakeExam_Resources/03.NewsLetter/index.html
@@ -83,7 +83,39 @@
 		</div>
 	</main>
 	<footer>
-		
+		<div class="content-f">
+			<div class="column-f">
+				<p>Random Stuff</p>
+				<a>Etiam feugiat condimentum</a>
+				<a>Aliquam imperdiet suscipit odio</a>
+				<a>Sed porttitor cras in erat nec</a>
+				<a>Felis varius pellentesque potenti</a>
+				<a>Nullam scelerisque blandit leo</a>
+			</div>
+			<div class="column-f">
+				<p>Random Stuff</p>
+				<a>Etiam feugiat condimentum</a>
+				<a>Aliquam imperdiet suscipit odio</a>
+				<a>Sed porttitor cras in erat nec</a>
+				<a>Felis varius pellentesque potenti</a>
+				<a>Nullam scelerisque blandit leo</a>
+			</div>
+			<div class="column-f">
+				<p>Random Stuff</p>
+				<a>Etiam feugiat condimentum</a>
+				<a>Aliquam imperdiet suscipit odio</a>
+				<a>Sed porttitor cras in erat nec</a>
+				<a>Felis varius pellentesque potenti</a>
+				<a>Nullam scelerisque blandit leo</a>
+			</div>
+			<div class="column-f">
+				<p>Contact us</p>
+				<p>Fictional Address</p>
+				<p>City, Postcode</p>
+				<p>(359) 000 00 00 00</p>
+			</div>
+		</div>
+		<p>© NewsLetter</p>
 	</footer>
 </body>
 </html>
